[package]   # required for publishing a crate.
name = "minigrep"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "IO Project (minigrep) from Rust Lang Book."
authors = ["Jack <jackhhchan912@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# These are default values anyway
# relates to `cargo build` and `cargo build --release`
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
